--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ PyJWT==0.4.3
 argparse==1.2.1
 dj-database-url==0.3.0
 dj-static==0.0.6
+django-dotenv==1.3.0
 django-grip==1.6.1
 django-hosts==1.2
 gripcontrol==2.4.1
