--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,31 @@
-Django==1.8.2
-PyJWT==1.4.0
-argparse==1.2.1
+alabaster==0.7.12
+Babel==2.6.0
 dj-database-url==0.3.0
 dj-static==0.0.6
+Django==1.11.20
 django-dotenv==1.4.1
-django-grip==1.7.0
-django-hosts==1.2
-gripcontrol==2.4.2
+django-grip==2.0.0
+django-hosts==3.0
+docutils==0.14
+gripcontrol==3.3.0
 gunicorn==19.3.0
-pubcontrol==2.2.7
+imagesize==1.1.0
+Jinja2==2.10
+MarkupSafe==1.1.1
+packaging==19.0
+pkg-resources==0.0.0
+pubcontrol==2.4.2
+Pygments==2.3.1
+PyJWT==1.4.0
+pyparsing==2.3.1
+pytz==2018.9
 redis==2.10.3
 requests==2.10.0
+six==1.12.0
+snowballstemmer==1.2.1
+Sphinx==1.8.5
+sphinxcontrib-websupport==1.1.0
 static3==0.6.1
+typing==3.6.6
+Werkzeug==0.15.2
 whitenoise==1.0.6
-wsgiref==0.1.2
