--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,7 +2,7 @@
 nodaemon=true
 
 [program:app]
-command=python /app/manage.py runserver 0.0.0.0:8000
+command=python3 /app/manage.py runserver 0.0.0.0:8000
 stderr_logfile=/var/log/app.err.log
 stdout_logfile=/var/log/app.out.log
 
