Make pushpin on container platform specific for amd64/arm64.

--- a/linux/amd64/pushpin.conf
+++ b/linux/amd64/pushpin.conf
@@ -16,34 +16,42 @@ stats_connection_ttl=120
 
 [runner]
 # services to start
-services=zurl,mongrel2,m2adapter,pushpin-proxy,pushpin-handler
+services=condure,zurl,pushpin-proxy,pushpin-handler
 
-# plain HTTP port that mongrel2 should listen on
+# plain HTTP port to listen on for client connections
 http_port=7999
 
-# list of HTTPS ports that mongrel2 should listen on (you must have certs set)
+# list of HTTPS ports to listen on for client connections (you must have certs set)
 #https_ports=443
+
+# list of unix socket paths to listen on for client connections
+#local_ports={rundir}/{ipc_prefix}server
 
 # directory to save log files
 logdir=/var/log/pushpin
 
 # logging level. 2 = info, >2 = verbose
-log_level=5
+log_level=2
 
 # client full request header must fit in this buffer
 client_buffer_size=8192
 
+# maximum number of client connections
+client_maxconn=50000
+
 # paths
+condure_bin=condure
 mongrel2_bin=mongrel2
 m2sh_bin=m2sh
 zurl_bin=zurl
+
 
 [proxy]
 # routes config file (path relative to location of this file)
 routesfile=routes
 
 # enable debug mode to get informative error responses
-debug=true
+debug=false
 
 # whether to use automatic CORS and JSON-P wrapping
 auto_cross_origin=true
@@ -63,13 +71,19 @@ x_forwarded_for_trusted=
 # the following headers must be marked in order to qualify as orig
 orig_headers_need_mark=
 
+# whether to accept Pushpin-Route header
+accept_pushpin_route=false
+
 # include client IP address in logs
 log_from=false
 
 # include client user agent in logs
 log_user_agent=false
 
-# for signing requests proxied by pushpin. use "base64:" prefix for binary key
+# for signing proxied requests
+sig_iss=pushpin
+
+# for signing proxied requests. use "base64:" prefix for binary key
 sig_key=changeme
 
 # use this to allow grip to be forwarded upstream (e.g. to fanout.io)
@@ -86,11 +100,7 @@ sockjs_url=http://cdn.jsdelivr.net/sockjs/0.3.4/sockjs.min.js
 # pushpin will output a log message when a new version is available. report
 # mode helps the pushpin project build credibility, so please enable it if you
 # enjoy this software :)
-#
-# NOTE: Upstream enables this feature by default. The debian package
-# disables it for privacy reasons. please consider to enable it by setting
-# updates_check to 'report'.
-updates_check=off
+updates_check=report
 
 # use this field to identify your organization in updates requests. if left
 # blank, updates requests will be anonymous
@@ -114,6 +124,10 @@ push_in_sub_connect=false
 push_in_http_addr=0.0.0.0
 push_in_http_port=5561
 
+# maximum headers and body size in bytes when receiving publish commands via HTTP
+push_in_http_max_headers_size=10000
+push_in_http_max_body_size=1000000
+
 # bind PUB for sending stats (metrics, subscription info, etc)
 stats_spec=ipc://{rundir}/{ipc_prefix}stats
 
@@ -128,6 +142,9 @@ message_hwm=25000
 
 # set to report blocks counts in stats (content size / block size)
 #message_block_size=
+
+# max time (milliseconds) for out-of-order messages to wait
+message_wait=5000
 
 # time (seconds) to cache message ids
 id_cache_ttl=60
