--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-GRIP_URL=http://localhost:5561
+GRIP_URL=http://pushpin:5561
 WHINBOX_API_BASE=http://localhost:7999/api
 REDIS_HOST=redis
 REDIS_PORT=6379
