--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,23 @@ services:
     container_name: app
     build:
       context: ./
+      dockerfile: Dockerfile
+    restart: unless-stopped
+    links:
+      - "pushpin"
+      - "redis"
+    volumes:
+      - ./.env:/app/.env
+  pushpin:
+    container_name: pushpin
+    build:
+      context: ./
+      dockerfile: Dockerfile.pushpin
     restart: unless-stopped
     ports:
       - "7999:7999"
-    links:
-      - "redis"
+    volumes:
+      - ./routes:/etc/pushpin/routes
 
   redis:
     image: redis
