--- a/supervisord.conf
+++ b/supervisord.conf
@@ -5,3 +5,8 @@ nodaemon=true
 command=python3 /app/manage.py runserver 0.0.0.0:8000
 stderr_logfile=/var/log/app.err.log
 stdout_logfile=/var/log/app.out.log
+
+[program:cron]
+command=cron -f
+stderr_logfile=/var/log/cron.err.log
+stdout_logfile=/var/log/cron.out.log
